--- a/static/styles.css
+++ b/static/styles.css
@@ -1,1 +1,34 @@
+body {
+    background: white;
+    color: black;
+    font-family: Arial;
+    text-align: center;
+}
 
+.stickman {
+    margin: 40px auto;
+    width: 50px;
+}
+
+.head {
+    width: 50px;
+    height: 50px;
+    border: 4px solid black;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+.body {
+    width: 4px;
+    height: 80px;
+    background: black;
+    margin: 0 auto;
+}
+
+.legs {
+    width: 4px;
+    height: 50px;
+    background: black;
+    margin: 0 auto;
+    transform: rotate(0deg);
+}
